@@ -1,0 +1,2 @@
+Speed improvements to which.min and which.max, based on R-3.2.3, with
+additional improvements added.
