@@ -8,13 +8,11 @@ Modifications to R in pqR are Copyright (C) 2013-2017 Radford M. Neal
 
 Some modules are from R-2.15.1 or later versions distributed by the R Core Team
 
-Platform: x86_64-apple-darwin16.6.0 (64-bit)
+Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
 Type 'license()' or 'licence()' for distribution details.
-
-  Natural language support but running in an English locale
 
 R is a collaborative project with many contributors.
 Type 'contributors()' for more information and
@@ -28,6 +26,7 @@ Type 'q()' to quit R.
 No helper threads, task merging enabled, uncompressed pointers.
 
 > # Test possible bugs involving 'match', '%in%', 'duplicated', etc.
+> # and also which, which.min, and which.max.
 > #
 > # Added for pqR, 2017, Radford M. Neal.
 > 
@@ -157,4 +156,79 @@ logical(0)
 [1] FALSE
 > print(sum(y %in% ap))
 [1] 0
+> 
+> # Tests of which.
+> 
+> print(which(c(NA,TRUE,FALSE,FALSE,TRUE,NA,TRUE)))
+[1] 2 5 7
+> print(which(c(NA,NA,NA)))
+integer(0)
+> print(which(logical(0)))
+integer(0)
+> 
+> # Tests of which.min and which.max.
+> 
+> print(which.min(c(TRUE,TRUE,FALSE,FALSE,TRUE)))
+[1] 3
+> print(which.min(c(NA,TRUE,TRUE,NA,FALSE,FALSE)))
+[1] 5
+> print(which.min(c(NA,TRUE,TRUE,NA,TRUE)))
+[1] 2
+> print(which.min(c(NA,NA,NA)))
+integer(0)
+> print(which.min(logical(0)))
+integer(0)
+> 
+> print(which.max(c(FALSE,FALSE,TRUE,TRUE,FALSE)))
+[1] 3
+> print(which.max(c(NA,FALSE,FALSE,NA,TRUE,TRUE)))
+[1] 5
+> print(which.max(c(NA,FALSE,FALSE,NA,FALSE)))
+[1] 2
+> print(which.max(c(NA,NA,NA)))
+integer(0)
+> print(which.max(logical(0)))
+integer(0)
+> 
+> print(which.min(c(7L,2L,-1L,8L)))
+[1] 3
+> print(which.min(c(NA,7L,2L,NA,-1L,8L)))
+[1] 5
+> print(which.min(as.integer(c(NA,NA,NA))))
+integer(0)
+> print(which.min(integer(0)))
+integer(0)
+> 
+> print(which.max(c(7L,2L,-1L,8L)))
+[1] 4
+> print(which.max(c(NA,7L,2L,NA,-1L,8L)))
+[1] 6
+> print(which.max(as.integer(c(NA,NA,NA))))
+integer(0)
+> print(which.max(integer(0)))
+integer(0)
+> 
+> print(which.min(c(7.1,2.1,-1.1,8.1)))
+[1] 3
+> print(which.min(c(NA,7.1,2.1,NA,-1.1,8.1)))
+[1] 5
+> print(which.min(as.integer(c(NA,NA,NA))))
+integer(0)
+> print(which.min(integer(0)))
+integer(0)
+> 
+> print(which.max(c(7.1,2.1,-1.1,8.1)))
+[1] 4
+> print(which.max(c(NA,7.1,2.1,NA,-1.1,8.1)))
+[1] 6
+> print(which.max(as.double(c(NA,NA,NA))))
+integer(0)
+> print(which.max(double(0)))
+integer(0)
+> 
+> print(which.min(c("55","66","22","33")))
+[1] 3
+> 
+> print(which.max(c("55","66","22","33")))
+[1] 2
 > 
